Setup update api to set the main page
